# defmt

./: Cargo.toml
defmt/src/: formatter.rs  lib.rs  traits.rs
defmt/src/export/: traits.rs
defmt/src/impls/: adapter.rs  arrays.rs  mod.rs  primitives.rs
defmt/src/impls/core_/: mod.rs
firmware/panic-probe/src/: lib.rs
macros/src/derives/: format.rs
macros/src/function_like/: log.rs
macros/src/function_like/log/: codegen.rs
test_esp32c6/: Cargo.toml
test_esp32c6/.cargo/: config.toml
test_esp32c6/src/: main.rs
